# rushes

./: .gitignore  HANDOFF.md  IDEA.md  README.md  pyproject.toml
docs/: architecture.md
rushes/: cameras.py  config.py  db.py  events.py  gopro.py  importer.py  ingest.py  jellyfin.py  metadata.py  netsetup.py  recorded.py  settings.py  slug.py  thumbs.py  watch.py
rushes/web/: app.py
rushes/web/templates/: cameras.html  events.html  import.html  index.html  login.html  settings.html
scripts/: gopro-connect.sh  gopro-diag.sh  gopro-reset.sh  install-container.sh  install-host.sh
systemd/: rushes-web.service
udev/: 99-gopro.rules
